--- a/flyseats-frontend/src/app/features/flights/flight-search/flight-search.component.html
+++ b/flyseats-frontend/src/app/features/flights/flight-search/flight-search.component.html
@@ -147,11 +147,11 @@
               <mat-icon>flight_class</mat-icon>
               <span>{{ flight.travelerPricings?.[0]?.fareDetailsBySegment?.[0]?.cabin || 'Economy' }}</span>
             </div>
-            <div class="stat" *ngIf="flight.itineraries?.[0]?.segments && flight.itineraries?.[0]?.segments?.length > 1">
+            <div class="stat" *ngIf="(flight.itineraries?.[0]?.segments?.length ?? 0) > 1">
               <mat-icon>connecting_airports</mat-icon>
-              <span>{{ flight.itineraries?.[0]?.segments?.length - 1 }} escala(s)</span>
+              <span>{{ (flight.itineraries?.[0]?.segments?.length ?? 0) - 1 }} escala(s)</span>
             </div>
-            <div class="stat" *ngIf="!flight.itineraries?.[0]?.segments || flight.itineraries?.[0]?.segments?.length === 1">
+            <div class="stat" *ngIf="(flight.itineraries?.[0]?.segments?.length ?? 0) === 1">
               <mat-icon>check_circle</mat-icon>
               <span class="direct-badge">Directo</span>
             </div>
